fixed z-index of modal

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
 	background-color: $dark-text;
 	color: $bg-primary-color;
 	z-index: 10;
+	background-color: transparent;
 }
 
 .header_container__light {
